<resources>
    <string name="app_name">Love-binance</string>
    <string name="btc_market">BTC Market</string>
    <string name="eth_market">ETH Market</string>
    <string name="usdt_market">USDT Market</string>
    <string name="twenty_four_hour_trade_amount">24小时成交额</string>
    <string name="buy">买入</string>
    <string name="sell">卖出</string>
    <string name="latest_trade">最新成交</string>
    <string name="price">价格</string>
    <string name="count">数量</string>
    <string name="time">时间</string>
    <string name="low_price">24小时最低价</string>
    <string name="trade_amount">24小时成交额</string>
    <string name="high_price">24小时最高价</string>
    <string name="percent_change">24小时涨跌</string>
    <string name="search_tip">请输入关键字搜索</string>
    <string name="cancel">取消</string>
    <string name="search_result">搜索结果:</string>
    <string name="custom_market">自选行情</string>
    <string name="confirm">确定</string>
    <string name="edit">编辑</string>
    <string name="k_line">K线图</string>
</resources>
